[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = "Final project of course Deep Learning (00460217), Technion, Spring semester 2025."
authors = [
    "Gabriel Uram <gabriel.uram@campus.technion.ac.il>",
    "Ori Razon <ori.razon@campus.technion.ac.il>",
]
readme = "README.md"
packages = [{include = "sentiment_analysis", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^2.1"
pandas = "^2.3.1"
torch = "^2.7.1"
torchvision = "^0.22.1"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.1"
tensorflow = "^2.19.0"
notebook = "^7.4.4"
transformers = "^4.53.3"
tensorflow-keras = "^0.1"



[tool.poetry.group.dev.dependencies]
black = "^25.1.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
